@@ -1,5 +1,9 @@
 Release 1.17 - ???
 
+  * Fix bug in CharsetDetector that led to different detected charsets
+    depending on whether user setText with a byte[] or an InputStream
+    via Sean Story (TIKA-2475).
+
   * Remove JAXB for easier use with Java 9 via Robert Munteanu (TIKA-2466).
 
   * Upgrade to POI 3.17 (TIKA-2429).
